# memaflowmon

./: .env  .env.template  .gitignore  README.md  example_directus.py  main.py  memaflowmon.py  monitor_workflow.py  pyproject.toml  test_graphql.py  working_directus.py
experiments/: count_edition_articles.py  main.py  query_directus.py
src/: __init__.py  memaflowmon.py  sendmail.py  system_info.py
